# image-manager

./: .gitignore  LICENSE  README.md  image_manager.py  jpg_to_png_converter.py  pyproject.toml  pytest.ini  test_image_manager.py
src/image_manager/: check_path.py  convert_to_png.py  image_manager.py  resize_images.py  round_corners.py
tests/: conftest.py  test_convert_to_png.py  test_image_manager.py  test_resize_images.py  test_round_corners.py  utilities_testdir.py
