[project]
name = "image-manager"
requires-python = ">= 3.9"
authors = [{name = "Alex C Warren", email = "alexcwarren.info@gmail.com"}]
description = "Modify a batch of given image files."
readme = "README.md"
license = {file = "LICENSE"}
version = "1.0"
dependencies = [
    "pillow",
    "pytest",
]

[tool.black]
line-length = 87
